2008-01-21  Guillem Jover  <guillem@debian.org>

	* configure.ac (AC_CHECK_FUNCS): Merge arguments from both macro
	calls.

2008-01-21  Guillem Jover  <guillem@debian.org>

	* configure.ac (AM_GNU_GETTEXT): Add external.
	(AC_CHECK_FUNCS): Add strtoul.
	(AC_CONFIG_FILES): Remove 'intl/Makefile'.
	* .gitignore: Remove intl.
	* Makefile.am (SUBDIRS): Likewise.
	* dpkg-deb/Makefile.am (INCLUDES): Remove '-I$(top_srcdir)/intl'.
	* dpkg-split/Makefile.am (INCLUDES): Likewise.
	* dselect/Makefile.am (INCLUDES): Likewise.
	* getopt/Makefile.am (INCLUDES): Likewise.
	* lib/Makefile.am (INCLUDES): Likewise.
	* src/Makefile.am (INCLUDES): Likewise.
	* utils/Makefile.am (INCLUDES): Likewise.

2008-01-21  Guillem Jover  <guillem@debian.org>

	* configure.ac (AC_CHECK_FUNCS): Add getdtablesize.
	* utils/start-stop-daemon.c (get_open_fd_max): New function.
	(main) [OShpux]: Remove.
	[!OShpux]: Use get_open_fd_max instead of hardcoded getdtablesize.

2008-01-21  Guillem Jover  <guillem@debian.org>

	* man/start-stop-daemon.8: Fix quotation to get rid of a spurious
	space between -c option and comma.

2008-01-20  Guillem Jover  <guillem@debian.org>

	* man/start-stop-daemon.8: Coalesce all matching options into a new
	section. List matching options by reference in the description
	section.

2008-01-20  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (do_help): Change from 'Mandatory' to
	'Matching'. Suggested by Justin Pryzby.

2008-01-19  Raphael Hertzog  <hertzog@debian.org>

	* scripts/dpkg-buildpackage.pl: Use
	Dpkg::Changelog::parse_changelog() instead of calling
	dpkg-parsechangelog.

	* scripts/dpkg-checkbuilddeps.pl: Fix a bug left-over from the
	switch to Dpkg::Control.

2008-01-18  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm,
	scripts/Dpkg/Shlibs/Objdump.pm, scripts/Dpkg/Shlibs.pm: Update and
	fix many syserr(), error(), warning() and subprocerr() calls to
	the new style where the sprintf call is integrated. Uniformize