@@ -1,5 +1,10 @@
 2008-01-21  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c (main): Cast runas_uid and runas_gid to
+	uid_t and gid_t when comparing to getuid() and getgid().
+
+2008-01-21  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac (AC_CHECK_FUNCS): Merge arguments from both macro
 	calls.
 
